Updating build with new jvm args for xstream compatibility with java 17+.